@@ -1,4 +1,4 @@
-#!/usr/bin/env jdl-script
+#!/usr/bin/env isis-script
 require ("fits");
 
 if (__argc != 5)
@@ -7,13 +7,12 @@ if (__argc != 5)
    exit (1);
 }
 
-_debug_info = 1; _traceback=1;
-static variable File = __argv[1];
-static variable Chip_Id = integer (__argv[2]);
-static variable Chip_X = atof (__argv[3]);
-static variable Chip_Y = atof (__argv[4]);
+private variable File = __argv[1];
+private variable Chip_Id = integer (__argv[2]);
+private variable Chip_X = atof (__argv[3]);
+private variable Chip_Y = atof (__argv[4]);
 
-static define compute_fef (t, p, kth)
+private define compute_fef (t, p, kth)
 {
    variable i, imax = 10;
    
@@ -26,7 +25,7 @@ static define compute_fef (t, p, kth)
 	variable pos = get_struct_field (t, sprintf ("g%d_pos", i))[kth];
 	variable amp = get_struct_field (t, sprintf ("g%d_ampl", i))[kth];
 	variable k0=0;
-	vmessage ("[%d %d]: fwhm=%g, pos=%g, ampl=%g (regnum=%d)", i, k0, sigma[k0], pos[k0], amp[k0],
+	vmessage ("[%d %d]: fwhm=%S, pos=%S, ampl=%S (regnum=%d)", i, k0, sigma[k0], pos[k0], amp[k0],
 		  t.regnum[kth[0]]);
 	
 	variable j;
@@ -37,7 +36,9 @@ static define compute_fef (t, p, kth)
 	     if (sigma[j] != 0)
 	       {
 		  variable x = (p - pos[j])/sigma[j];
-		  y[j,*] += amp[j] * exp (-0.5*x*x)/(sqrt(2*PI) * sigma[j]);
+		  %y[j,*] += amp[j] * exp (-0.5*x*x)/(sqrt(2*PI) * sigma[j]);
+		  % The FEF uses unnormalized gaussians
+		  y[j,*] += amp[j] * exp (-0.5*x*x);
 	       }
 	  }
      }
@@ -49,7 +50,7 @@ static define compute_fef (t, p, kth)
    %return (p,y);
 }
 
-static define read_fef (file, ccdid, x, y)
+private define read_fef (file, ccdid, x, y)
 {
    variable t = fits_read_table (file);
    variable i = where ((t.chipx_lo <= x)
@@ -63,14 +64,14 @@ static define read_fef (file, ccdid, x, y)
    (e,y) = compute_fef (t, p, i);
    %plot_open ("out.ps/CPS");
 
-   pset_ylabel ("PHA");
-   pset_xlabel ("ENERGY");
-   pset_x (0.0, 10.0);
-   pset_points;
-   plot2d (t.energy[i], t.channel[i]);
+   ylabel ("PHA");
+   xlabel ("ENERGY");
+   xrange (0.0, 10.0);
+   connect_points (0);
+   plot (t.energy[i], t.channel[i]);
    plot_pause ();
 
-   pset_lines;
+   connect_points(1);
    variable j;
    for (j = 0; j < length(i); j++)
      {
@@ -80,14 +81,14 @@ static define read_fef (file, ccdid, x, y)
 	variable mean_en = sum(yy * e *de)/sum(yy*de);
 	variable mean_chan = sum (p*yy)/sum(yy);
 	variable k = where (yy == max(yy))[0];
-	pset_title (sprintf ("En=%g, Mean En=%g, Peak En=%g, Mean Chan=%g=%g keV", 
-			     en, mean_en, e[k],
-			     mean_chan, 
-			     interpol (mean_chan, t.channel[i], t.energy[i])[0]));
+	title (sprintf ("En=%S, Mean En=%S, Peak En=%S, Mean Chan=%S=%S keV", 
+			en, mean_en, e[k],
+			mean_chan, 
+			interpol (mean_chan, t.channel[i], t.energy[i])[0]));
 
-	pset_x (e[k]-0.4, e[k]+0.4);
-	%pset_logy; pset_y (0.001,);pset_x (0,3);
-	plot2d (e,yy);
+	xrange (_max(e[k]-2,0), e[k]+0.4);
+	ylog(); yrange (0.001,);
+	plot (e,yy);
 	plot_pause;
      }
    plot_close;
