@@ -14,7 +14,14 @@ What's NEW for marx 4.4.0?
   directory.  Previously, unless a hidden parameter was marked to be
   "learned" (mode="hl"), the value used for the simulation was not
   reflected in the output marx.par file.
-     
+  
+* It was discovered that in interpreting the acis response FEF, marx
+  was using standard normalized gaussians, whereas mkrmf uses
+  unnormalized gaussians.  This difference caused the marx response to
+  be different away from the main peak from that of the RMF generated
+  by mkrmf.  Marx 4.4.0 now uses the unnormalized form to be
+  consistent with mkrmf.
+
 What's NEW for marx 4.3.0?
 
 * `make install` installs marx in a more traditional unix manner.  See
